kustomize/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
spec:
  replicas: 2
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: trilium.io
                    operator: In
                    values:
                      - main-worker
      containers:
        - name: trilium
          image: triliumnext/trilium:v0.99.5
          resources:
            limits:
              cpu: 1500m
              memory: 2Gi
            requests:
              cpu: 1000m
              memory: 1Gi
