kustomize/overlays/prod/prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trilium
    app.kubernetes.io/service: trilium
    app.kubernetes.io/version: 0.92.4
    helm.sh/chart: trilium-1.3.0
  name: trilium
  namespace: trilium
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/name: trilium
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: trilium
    app.kubernetes.io/version: 0.92.4
    helm.sh/chart: trilium-1.3.0
  name: trilium
  namespace: trilium
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: trilium
      app.kubernetes.io/name: trilium
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: trilium
        app.kubernetes.io/name: trilium
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: trilium.io
                operator: In
                values:
                - main-worker
            weight: 100
      automountServiceAccountToken: true
      containers:
      - env:
        - name: key
          value: value
        image: triliumnext/trilium:v0.99.5
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
        name: trilium
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 1500m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /home/node/trilium-data/config.ini
          name: config
          subPath: config.ini
        - mountPath: /home/node/trilium-data
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - configMap:
          name: trilium-config
        name: config
      - name: data
        persistentVolumeClaim:
          claimName: trilium-data
