kustomize/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: trilium
  namespace: trilium
spec:
  hosts:
    - "*"
  gateways:
    - trilium-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: trilium
            port:
              number: 8080
